@@ -3,6 +3,9 @@ CHANGES.txt - 02/25/2006
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The IPP backend now supports a compression option to
+	  compress print files as they are sent to the remote
+	  server (STR #956)
 	- The CUPS browse protocol now supports passing of
 	  default options and browse timeout values from the
 	  server to the clients (STR #800)
